# emp-tool

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  run  todo.txt  verdicts.txt
.github/workflows/: build.yml  codeql.yml
audit-report/: 00-overview.html  01-runtime.html  02-ir.html  03-circuits.html  index.html
bench/: CMakeLists.txt  bench_aes.cpp  bench_block.cpp  bench_ccrh.cpp  bench_dispatch.cpp  bench_f2k.cpp  bench_garble.cpp  bench_halfgate.cpp  bench_hash.cpp  bench_mitccrh.cpp  bench_netio.cpp  bench_prg.cpp  bench_prp.cpp  bench_tlsio.cpp  bench_utils.cpp
build_local/: emp-tool-config.cmake  emp-toolTargets.cmake
cmake/: circuit_asset_dirs.h.in
docs/: EMP_TRANSLATION.md  api_conventions.md  backend.md  benchmark_conventions.md  circuits.md  floating_point_circuits.md  frontend.md  io_channel.md  numeric_semantics.md  static_init.md  test_conventions.md  test_mode.md
emp-tool/: emp-tool.h
emp-tool/circuits/: aes_128_ctr.h  aes_circuit.h  backend_ctx.h  bit.h  bitvec.h  bitvec.hpp  block_types.h  boolean_program.h  builtin_circuit_files.cpp  builtin_circuit_files.h  circuit.cpp  circuit.h  circuit_artifact.h  circuit_assets.cpp  circuit_assets.h  circuit_block.h  circuit_types.h  circuit_value.h  circuits.h  context.h  empbc.h  float.h  float.hpp  float32.h  float_builtins.cpp  float_builtins.h  float_circuit_files.cpp  float_traits.h  numeric_kernels.h  sha256_circuit.h  sha3_256.h  sha3_circuit.h  shape.h  signed_int.h  sort.h  sortable.h  typed.h  unsigned_int.h  value_traits.h
emp-tool/circuits/crypto/: aes128.h  crypto.h  keccak.h  sha256.h
emp-tool/circuits/files/: README.md  aes128.empbc  fp16_abs.empbc  fp16_add.empbc  fp16_copysign.empbc  fp16_eq.empbc  fp16_isnan.empbc  fp16_le.empbc  fp16_max.empbc  fp16_min.empbc  fp16_mul.empbc  fp16_ne.empbc  fp16_neg.empbc  fp16_recip.empbc  fp16_sqrt.empbc  fp16_square.empbc  fp16_sub.empbc  fp32_abs.empbc  fp32_add.empbc  fp32_copysign.empbc  fp32_div.empbc  fp32_fma.empbc  fp32_ge.empbc  fp32_isnan.empbc  fp32_iszero.empbc  fp32_le.empbc  fp32_min.empbc  fp32_ne.empbc  fp32_neg.empbc  fp32_rsqrt.empbc  fp64_abs.empbc  fp64_copysign.empbc  fp64_eq.empbc  fp64_gt.empbc  fp64_isinf.empbc  fp64_isnan.empbc  fp64_iszero.empbc  fp64_max.empbc  fp64_ne.empbc  fp64_neg.empbc  (+2 more)
emp-tool/circuits/float_circuits/: float32_ops.hpp
emp-tool/circuits/frontend/: circuit_fn.h  frontend.h  rec.h
emp-tool/context/: checks.h  clear.h  context.h  count.h  digest.h  record.h
emp-tool/core/: simd_tier.h  utils.h  utils.hpp
emp-tool/crypto/: aes.h  aes.hpp  ccrh.h  ec.cpp  hash.h  mitccrh.h  prg.h  ro.h  session_id.h
emp-tool/execution/: clear_backend.h  half_gate.h  privacy_free.h
emp-tool/frontend/: boolean_program.h  circuit.h  circuit_fn.h  executor.h  frontend.h  passes.h  rec.h  record_backend.h
emp-tool/io/: io_channel.h  net_io_channel.h  tls_io_channel.h  trace_io.h
emp-tool/ir/: artifact.h  assets.cpp  assets.h  builtins.cpp  builtins.h  empbc.h  execute.h  ir.h  passes.h  program.h  schedule.h  validate.h  visit.h  wire_value.h
emp-tool/ir/context/: checks.h  clear.h  concept.h  context.h  count.h  digest.h  record.h
emp-tool/ir/files/: README.md  fp16_div.empbc  fp16_fma.empbc  fp16_ge.empbc  fp16_gt.empbc  fp16_isinf.empbc  fp16_iszero.empbc  fp16_lt.empbc  fp16_rsqrt.empbc  fp32_eq.empbc  fp32_gt.empbc  fp32_isinf.empbc  fp32_lt.empbc  fp32_max.empbc  fp32_mul.empbc  fp32_recip.empbc  fp32_sqrt.empbc  fp32_square.empbc  fp32_sub.empbc  fp64_add.empbc  fp64_div.empbc  fp64_fma.empbc  fp64_ge.empbc  fp64_le.empbc  fp64_lt.empbc  fp64_min.empbc  fp64_mul.empbc  fp64_rsqrt.empbc  fp64_sqrt.empbc  fp64_square.empbc  fp64_sub.empbc  sha256_256.empbc
emp-tool/ir/session/: clear_session.h  session.h  session_io.h
emp-tool/runtime/: runtime.h
emp-tool/runtime/core/: block.h  block.hpp  block_vector.h  constants.h  simd_tier.h  test_mode.h  utils.h  utils.hpp
emp-tool/runtime/crypto/: aes.h  aes.hpp  ccrh.h  ec.cpp  f2k.h  f2k.hpp  hash.h  mitccrh.h  prg.h  prp.h  ro.h  session_id.h
emp-tool/runtime/execution/: half_gate.h  privacy_free.h
emp-tool/runtime/io/: io_channel.h  net_io_channel.h  tcp_socket.h  tls_io_channel.h  trace_io.h
emp-tool/session/: clear_session.h  concept.h
emp-tool/utils/: prg.h
test/: CMakeLists.txt  circuit_fn_contract_probes.cpp  frontend_contract_probes.cpp  test_aes_128_ctr.cpp  test_aes_circuit.cpp  test_bit.cpp  test_bitvec.cpp  test_block.cpp  test_boolean_program.cpp  test_builtin_circuits.cpp  test_ccrh.cpp  test_circuit_file.cpp  test_circuit_fn.cpp  test_circuit_types.cpp  test_context.cpp  test_crypto_aes.cpp  test_crypto_common.h  test_crypto_keccak.cpp  test_crypto_sha256.cpp  test_dynamic.cpp  test_float.cpp  test_frontend.cpp  test_garble.cpp  test_gen_circuit.cpp  test_hash.cpp  test_int.cpp  test_mitccrh.cpp  test_netio.cpp  test_passes.cpp  test_prg.cpp  test_prp.cpp  test_ro.cpp  test_runtime_int.cpp  test_session_concepts.cpp  test_sha256_circuit.cpp  test_sha3_256.cpp  test_sha3_circuit.cpp  test_sort.cpp  test_typed.cpp  test_uint.cpp
test/circuits/: circuit_fn_contract_probes.cpp  test_bit.cpp  test_bitvec.cpp  test_circuit_fn.cpp  test_crypto_aes.cpp  test_crypto_common.h  test_crypto_keccak.cpp  test_crypto_sha256.cpp  test_float.cpp  test_int.cpp  test_runtime_int.cpp  test_sort.cpp  test_typed.cpp  test_uint.cpp
test/ir/: test_context.cpp  test_dynamic.cpp  test_session_concepts.cpp
test/runtime/: test_aes.cpp  test_ccrh.cpp  test_ecc.cpp  test_f2k.cpp  test_halfgate.cpp  test_hash.cpp  test_mitccrh.cpp  test_netio.cpp  test_ro.cpp  test_tlsio.cpp  test_utils.cpp
tools/: float_to_empbc.py
